--- a/reviews.html
+++ b/reviews.html
@@ -59,7 +59,22 @@
       <h3>⭐️⭐️⭐️⭐️⭐️ - Ava, FL</h3>
       <p>"Been a fan since day one and it just keeps getting better. I’ll never miss a tour!"</p>
     </section>
+
+
+<!-- Fun Fan Poll -->
+<section class="review">
+  <h3>🤔 Fan Poll</h3>
+  <p>Do you think Morgan Wallen deserves 5 stars?</p>
+  <button id="fanPollBtn">Answer Now</button>
+</section>
+
+
+
   </main>
+
+
+
+
 
 
 <!--navigation-->
@@ -92,6 +107,8 @@
 <p>
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a></footer>
 
+<!--JS file-->
+<script src="jsMorgan.js"></script>
 
 </body>
    
