Updated fan poll added questions Add newsletter form logic/sticky button improvement

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 <p>
 <a href="https://www.morganwallen.com" class="website-link" target="_blank">Morgan Wallens Website</a>
 
+
+
 <p>Morgan Wallen sets the bar high- with his concerts</p>
 
 <hr>
@@ -117,6 +119,15 @@
 <!--footer-->
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a>
 </footer>
+
+<!--JS file-->
+<script src="jsMorgan.js"></script>
+
+<!--button for (backto top)-->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky cta button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
 
    </body>
    
