--- a/newsletter.html
+++ b/newsletter.html
@@ -37,7 +37,7 @@
     <h2>Join the MW Fanclub!</h2>
     <p class="subtext">Be the first to hear about tour updates, merch drops, and exclusive content.</p>
 
-    <form>
+    <form id="newsletterForm">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
@@ -46,7 +46,7 @@
 
       <button type="submit">Subscribe</button>
     </form>
-  </div>
+   </div>
 
   <img src="handsup.jpg" alt="Crowd cheering">
 </div>
@@ -86,6 +86,19 @@
 <!--footer-->
 <p>
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a></footer>
+
+
+<!--JS file-->
+<script src="jsMorgan.js"></script>
+
+
+<!--button for (backto top)-->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky call to action button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
+
+<a href="newsletter.html" class="bu">💌 Join the Fan Club</a>
 
 
 </body>
