--- a/reviews.html
+++ b/reviews.html
@@ -65,8 +65,13 @@
 <section class="review">
   <h3>🤔 Fan Poll</h3>
   <p>Do you think Morgan Wallen deserves 5 stars?</p>
-  <button id="fanPollBtn">Answer Now</button>
+
+  <!--<button id="fanPollBtn">Answer Now</button>-->
+
+<button id="fanPollBtn">🎤 Take the Fan Poll</button>
+
 </section>
+
 
 
 
@@ -107,8 +112,19 @@
 <p>
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a></footer>
 
+
 <!--JS file-->
 <script src="jsMorgan.js"></script>
+
+
+
+<!--button for (backto top)-->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky call to action button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
+
+
 
 </body>
    
