--- a/shop.html
+++ b/shop.html
@@ -153,7 +153,26 @@
 <p>
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a></footer>
 
+
+
 <!--JS file-->
+<script src="jsMorgan.js"></script>
+
+<!--button for (backto top)-->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky call to action button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
+
+
+
+
+
+
+
+
+
+
 </body>
    
 </html>
