--- a/tickets.html
+++ b/tickets.html
@@ -92,3 +92,23 @@
 <footer>
   <p>💖 Just a fun fan project — no actual tickets sold here.</p>
 </footer>
+
+<!--JS file-->
+<script src="jsMorgan.js"></script>
+
+
+<!-- Button for (back to top) -->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky call to action button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
+
+
+
+
+
+
+
+
+</body>
+</html>
