--- a/media.html
+++ b/media.html
@@ -100,6 +100,8 @@
 <!--morgans website link-->
 <p><a href="https://www.morganwallen.com" class="website-link" target="_blank">Morgan Wallens Website</a>
 
+
+
 <p>Morgan Wallen sets the bar high- with his concerts</p>
 
 <hr>
@@ -110,5 +112,16 @@
 <!--footer-->
 <footer id="contact">&copy; 2025 Kayla Kennedy | <a href="mailto:kaylaforsuccess@gmail.com">Email me your favorites!</a>
 </footer>
+
+
+<!--JS file-->
+<script src="jsMorgan.js"></script>
+
+<!--button for (backto top)-->
+<button class="back-to-top" onclick="scrollToTop()">🔝 Top</button>
+
+<!--sticky call to action button-->
+<a href="newsletter.html" class="sticky-cta">💌 Join the Fan Club</a>
+
    </body>
 </html>
